--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "electronShoppingList",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "simple shopping list",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -17,6 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^7.1.2"
+    "electron": "^7.1.2",
+    "electron-packager": "^14.1.0"
   }
 }
