--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electronShoppingList",
+  "name": "electron-shopping-list-app",
   "version": "1.0.0",
   "description": "simple shopping list",
   "main": "main.js",
@@ -18,6 +18,6 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^7.1.2",
-    "electron-packager": "^14.1.0"
+    "electron-packager": "^14.1.1"
   }
 }
